# teleborg

./: Cargo.toml
src/: error.rs  lib.rs  updater.rs
src/bot/: bot.rs  mod.rs  request_sender.rs  update_cleaner.rs  updates_receiver.rs
src/objects/: answer_call_back_query.rs  call_back_query.rs  chat.rs  inline_keyboard.rs  message.rs  mod.rs  outgoing_channel_message.rs  outgoing_delete.rs  outgoing_edit.rs  outgoing_message.rs  outgoing_photo.rs  parse_mode.rs  update.rs  user.rs
