[package]
name = "teleborg"
version = "0.1.32"
authors = ["Wesley A. Gahr <wesleyey0408@gmail.com>"]
documentation = "https://docs.rs/teleborg/0.1.32/teleborg/"
license = "Apache-2.0"
description = "A Telegram bot API."
repository = "https://github.com/voider1/teleborg"
readme = "README.md"
keywords = ["telegram-bot", "rust", "telegram-api"]

[dependencies]
futures = "*"
tokio-core = "*"
time = "*"
futures-cpupool = "*"
hyper = "*"
threadpool = "*"
reqwest = { version = "*"}
log = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
